# barcode_and_qrcode_reader

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  reader.py  reader4.py  requirements.txt  rotate_simple.py  script.py  testes.py  testes1.py  testes3.py  testes4.py  testes5.py  testes6.py
DataSet/: Parâmetros.txt
imgs/synthetic_barcodes/: barcode_results.csv
scripts/: reader1.py  reader10.py  reader2.py  reader3.py  reader4.py  reader5.py  reader6.py  reader7.py  reader8.py  reader9.py
src/: barcode_checker.py  barcode_quality_checker.py  reader.py
src/scripts/: reader1.py  reader2.py  reader3.py  reader5.py  reader6.py  reader9.py
src/synthetic_dataset/: dataset.py  datasets.py
src/testes/: rotate_simple.py  rotating.py  testes8.py
testes/: rotaciona.py  rotate_imutils.py  rotating.py  testes2.py  testes7.py  testes9.py
